--- a/src/components/_UIcomponents/modal/modal.scss
+++ b/src/components/_UIcomponents/modal/modal.scss
@@ -12,6 +12,11 @@
         right: 0;
         background: var(--white);
         padding: 30px;
+        overflow-y: scroll;
+        &::-webkit-scrollbar{
+            width: 0%;
+            position: absolute;
+        }
     }
     &-closeBtn{
         width: 20px;
