--- a/src/components/_UIcomponents/productInfoModal/ProductInfoModal.scss
+++ b/src/components/_UIcomponents/productInfoModal/ProductInfoModal.scss
@@ -7,8 +7,8 @@
     padding-bottom: 2px;
 }
 
-.productInfoModal{
 
+.productInfoModal{
     z-index: 12;
     width: 100%;
     height: 100%;
@@ -70,6 +70,87 @@
         display: flex;
         gap: 20px;
     }
+    &-info{
+        padding-top: 15px;
+        padding-bottom: 25px;
+    }
+    &-characteristics{
+        width: 100%;
+        &__item:nth-child(odd){
+            background: #F3F3F3;
+        }
+        &__item{
+            padding: 9px;
+        }
+        &__text{
+            display: flex;
+            justify-content: space-between;
+            .text-gray{
+                color: #979494;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+            }
+        }
+        span{
+            color: #000;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+    }
+    &-reviews{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        &__item{
+            width: 100%;
+            display: flex;
+            gap: 11px;
+        }
+        &__name{
+            color: #000;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+        &__compose{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 7px;
+            align-items: center;
+            justify-content: space-between;
+        }
+        &__rate{
+            
+        }
+        &__img{
+            min-width: 50px;
+            min-height: 50px;
+            max-width: 50px;
+            max-height: 50px;
+            img{
+                border-radius: 50%;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__description{
+            padding: 15px;
+            background: #F3F3F3;
+            border-radius: 7px;
+        }
+    }
+    &-description{
+        color: var(--gray);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
     &-item{
         @extend .item;
         border-bottom: 3px solid var(--light_gray);
@@ -82,3 +163,4 @@
         }
     }
 }
+
