--- a/src/components/basket/Basket.scss
+++ b/src/components/basket/Basket.scss
@@ -3,6 +3,40 @@
     height: 100%;
     background: var(--white);
     z-index: 12;
+    &-form{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
+        .basket-from__error{
+            color: var(--pink);
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            position: absolute;
+            bottom: -20px;
+        }
+        &__label{
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+    }
+    &-composeInput{
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        gap: 7px;
+    }
+    &-composeInput:nth-child(3){
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
     &-empty{
         width: 100%;
         height: 100%;
